# b21

./: .gitignore  .gitmodules  .remote-deploy.env  README.md  build-frontend.sh  compile-css-deps.sh  compile-js-deps.sh  deploy.sh  email.php  index.html  package.json  remote-deploy.sh  stack.yaml  svgtest.html  template.html
backend/: .gitignore  .ninja_log  README.md  b21-backend.cabal  build.ninja  debug.sh  makefile  test.env  test.sh
backend/app/: Calendar.hs  Main.hs  Timesheet.hs
backend/src/: backend.cc  backend.h  common.cc  common.h  logger.cc  logger.h  main.cc
backend/src/B21/: Api.hs  Timesheet.hs  Types.hs
backend/timesheet/: make-timesheet.sh
css/: custom.css
debug/: b21-debug.cabal  debug.env  debug.sh
debug/app/: Main.hs
frontend/: .gitignore  README.md  b21-frontend.cabal  build.sh  chat.html  chat_landing.html  codeofconduct.html  compile-js-deps.sh  debug.sh  index.html  package.json  timesheet-handler.php  timesheet.html
frontend/css/: custom.css
frontend/js/: custom.js
frontend/pages/: about.md  index.html  projects.html  timesheet.html
frontend/projects/: foo.md
frontend/src/: Main.hs
frontend/templates/: calendar.html  default.html  project.html  template.html  testimonial.html
frontend/testimonials/: jake.md
ics/: empty.ics  one-event.ics
js/: custom.js
redirect-manager/: .gitignore  README.md  b21-redirect-manager.cabal  debug.sh  test.sh
redirect-manager/app/: Main.hs
redirect-manager/src/B21/: Nginx.hs  Redirects.hs
redirect-manager/test/: example.redirects
systemd/: b21-backend.service
systemd/.config/systemd/user/: b21-backend.service  b21-redirect-manager.service
