name:                b21-backend
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aalexsmithh/b21#readme
license:             BSD3
license-file:        LICENSE
author:              Jacob Thomas Errington
maintainer:          b21@mail.jerrington.me
copyright:           2017 Building21
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    B21.Api,
    B21.Types
  build-depends:
    aeson,
    base >= 4.7 && < 5,
    servant,
    servant-server,
    text
  default-language:    Haskell2010
  default-extensions:
    DataKinds,
    DeriveAnyClass,
    DeriveFunctor,
    DeriveGeneric,
    GADTs,
    OverloadedStrings,
    TypeFamilies,
    TypeOperators

executable b21-backend-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    async,
    base,
    b21-backend,
    wai,
    warp,
    servant-server,
    text
  default-language:    Haskell2010
  default-extensions:
    LambdaCase,
    OverloadedStrings,
    RecordWildCards

source-repository head
  type:     git
  location: https://github.com/aalexsmithh/b21
