name:                b21-frontend
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/b21#readme
license:             BSD3
license-file:        LICENSE
author:              Jacob Thomas Errington & Alex Smith
maintainer:          b21@mail.jerrington.me
copyright:           2017 Building21
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable b21-frontend
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base,
    hakyll,
    pandoc,
    text,
    hjsmin,
    bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aalexsmithh/b21
