name:                b21-redirect-manager
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aalexsmithh/b21#readme
license:             BSD3
license-file:        LICENSE
author:              Jacob Thomas Errington
maintainer:          github@mail.jerrington.me
copyright:           2017 (c) Jacob Thomas Errington
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-extensions:
    DataKinds,
    GADTs,
    LambdaCase,
    RecordWildCards,
    TypeFamilies,
    TypeOperators
  exposed-modules:
    B21.Redirects
  build-depends:
    ansi-wl-pprint,
    base >= 4.7 && < 5,
    megaparsec,
    network-uri,
    servant,
    text

  default-language:    Haskell2010

executable b21-redirect-manager-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
    LambdaCase,
    OverloadedStrings,
    RecordWildCards
  build-depends:
    b21-redirect-manager,
    base,
    bytestring,
    network-uri,
    servant-server,
    text,
    wai,
    wai-extra,
    warp
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aalexsmithh/b21
